--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "kartik-v/yii2-grid": "@dev",
         "kartik-v/yii2-widgets": "*",
         "wbraganca/yii2-dynamicform": "*",
-        "kartik-v/yii2-detail-view": "*"
+        "kartik-v/yii2-detail-view": "*",
+        "kartik-v/yii2-nav-x": "*",
+        "kartik-v/yii2-datecontrol": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
